--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -20,6 +21,7 @@
     margin: 20px 0;
     padding: 10px 20px;
     border-radius: 4px;
+    background-color: beige;
 }
 .btm:hover {
     background-color: aliceblue;
