--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,12 @@
 .btm:hover {
     background-color: aliceblue;
 }
+
+.p  {
+    width: 100%;
+    height: 100%;
+}
+
+.transfer {
+    background-color: red;
+}
